## Tests for the 'Events' module of the OSDL library.


testseventsdir=@OSDL_TEST_DIR@/events

testsevents_CXXFLAGS = @AM_CXXFLAGS@

testsevents_PROGRAMS = \
	testOSDLController.exe               \
	testOSDLEvents.exe                   \
	testOSDLJoysticks.exe


testOSDLController_exe_SOURCES = testOSDLController.cc
testOSDLEvents_exe_SOURCES        = testOSDLEvents.cc
testOSDLJoysticks_exe_SOURCES = testOSDLJoysticks.cc
