## Tests for the 'Video' module of the OSDL library.


SUBDIRS = twoDimensional videoRenderer


testsvideodir=@OSDL_TEST_DIR@/video

testsvideo_CXXFLAGS = @AM_CXXFLAGS@

testsvideo_PROGRAMS = \
	testOSDLBlit.exe                            \
	testOSDLOpenGL.exe                          \
	testOSDLPalette.exe                         \
	testOSDLPixel.exe                           \
	testOSDLSurface.exe                         \
	testOSDLSurfacePrimitives.exe               \
	testOSDLSurfaceTransformations.exe          \
	testOSDLVideo.exe                           \
	testOSDLWindowManager.exe


testOSDLBlit_SOURCES                   = testOSDLBlit.cc
testOSDLOpenGL_SOURCES                 = testOSDLOpenGL.cc
testOSDLPalette_SOURCES                = testOSDLPalette.cc
testOSDLPixel_SOURCES                  = testOSDLPixel.cc
testOSDLSurface_SOURCES                = testOSDLSurface.cc
testOSDLSurfacePrimitives_SOURCES      = testOSDLSurfacePrimitives.cc
testOSDLSurfaceTransformations_SOURCES = testOSDLSurfaceTransformations.cc
testOSDLVideo_SOURCES                  = testOSDLVideo.cc
testOSDLWindowManager_SOURCES          = testOSDLWindowManager.cc
