## Tests for the 'Video' module of the OSDL library.


SUBDIRS = twoDimensional videoRenderer


testsvideodir=@OSDL_TEST_DIR@/video

testsvideo_CXXFLAGS = @AM_CXXFLAGS@

testsvideo_PROGRAMS = \
	testOSDLBlit.exe                            \
	testOSDLOpenGL.exe                          \
	testOSDLPalette.exe                         \
	testOSDLPixel.exe                           \
	testOSDLSurface.exe                         \
	testOSDLSurfacePrimitives.exe               \
	testOSDLSurfaceTransforms.exe               \
	testOSDLVideo.exe                           \
	testOSDLWindowManager.exe


testOSDLBlit_exe_SOURCES                   = testOSDLBlit.cc
testOSDLOpenGL_exe_SOURCES                 = testOSDLOpenGL.cc
testOSDLPalette_exe_SOURCES                = testOSDLPalette.cc
testOSDLPixel_exe_SOURCES                  = testOSDLPixel.cc
testOSDLSurface_exe_SOURCES                = testOSDLSurface.cc
testOSDLSurfacePrimitives_exe_SOURCES      = testOSDLSurfacePrimitives.cc
testOSDLSurfaceTransforms_exe_SOURCES      = testOSDLSurfaceTransforms.cc
testOSDLVideo_exe_SOURCES                  = testOSDLVideo.cc
testOSDLWindowManager_exe_SOURCES          = testOSDLWindowManager.cc

