## OSDL media-related tools.

SUBDIRS = audio video


mediatoolsdir=@OSDL_TOOL_DIR@/media

mediatools_CXXFLAGS = @AM_CXXFLAGS@


mediatools_PROGRAMS = \
	cypherOSDLFile.exe    \
	identifyOSDLFile.exe
	
cypherOSDLFile_exe_SOURCES = cypherOSDLFile.cc
identifyOSDLFile_exe_SOURCES = identifyOSDLFile.cc

