## Tests for the submodule 'Renderer' of the 'Audio' module 
## of the OSDL library.


testsaudioRendererdir=@OSDL_TEST_DIR@/audio/audioRenderer

testsaudioRenderer_CXXFLAGS = @AM_CXXFLAGS@

#testsaudioRenderer_PROGRAMS = \
#	testBasic.exe                               \
	

#testBasic_SOURCES                        = testBasic.cc
