## Tests for the submodule 'Two Dimensional' of the 'Video' module 
## of the OSDL library.


teststwodimensionaldir=@OSDL_TEST_DIR@/video/twoDimensional

teststwodimensional_CXXFLAGS = @AM_CXXFLAGS@

teststwodimensional_PROGRAMS = \
	testOSDLAnimation.exe                        \
	testOSDLBezier.exe                           \
	testOSDLCircle.exe                           \
	testOSDLConic.exe                            \ 
	testOSDLFixedFontCache.exe                   \
	testOSDLFixedFont.exe                        \
	testOSDLImage.exe                            \
	testOSDLLine.exe                             \
	testOSDLMultilineText.exe                    \
	testOSDLPixels.exe                           \
	testOSDLPoint2D.exe                          \
	testOSDLPolygon.exe                          \
	testOSDLSaveImage.exe                        \
	testOSDLText.exe                             \
	testOSDLTextWidget.exe                       \
	testOSDLTrueTypeFontCache.exe                \
	testOSDLTrueTypeFont.exe                     \
	testOSDLUprightRectangle.exe                 \
	testOSDLWidget.exe	


testOSDLAnimation_SOURCES         = testOSDLAnimation.cc
testOSDLBezier_SOURCES            = testOSDLBezier.cc
testOSDLCircle_SOURCES            = testOSDLCircle.cc
testOSDLConic_SOURCES             = testOSDLConic.cc
testOSDLFixedFontCache_SOURCES    = testOSDLFixedFontCache.cc
testOSDLFixedFont_SOURCES         = testOSDLFixedFont.cc
testOSDLImage_SOURCES             = testOSDLImage.cc
testOSDLLine_SOURCES              = testOSDLLine.cc
testOSDLMultilineText_SOURCES     = testOSDLMultilineText.cc
testOSDLPixels_SOURCES            = testOSDLPixels.cc
testOSDLPoint2D_SOURCES           = testOSDLPoint2D.cc
testOSDLPolygon_SOURCES           = testOSDLPolygon.cc
testOSDLSaveImage_SOURCES         = testOSDLSaveImage.cc
testOSDLText_SOURCES              = testOSDLText.cc
testOSDLTextWidget_SOURCES        = testOSDLTextWidget.cc
testOSDLTrueTypeFontCache_SOURCES = testOSDLTrueTypeFontCache.cc
testOSDLTrueTypeFont_SOURCES      = testOSDLTrueTypeFont.cc
testOSDLUprightRectangle_SOURCES  = testOSDLUprightRectangle.cc
testOSDLWidget_SOURCES            = testOSDLWidget.cc
 
