## Tests for the submodule 'Two Dimensional' of the 'Video' module of the OSDL
## library.


teststwodimensionaldir = @OSDL_TEST_DIR@/video/twoDimensional

teststwodimensional_CXXFLAGS = @AM_CXXFLAGS@

teststwodimensional_PROGRAMS = \
	testOSDLAnimation.exe                        \
	testOSDLBezier.exe                           \
	testOSDLCircle.exe                           \
	testOSDLConic.exe                            \
	testOSDLFixedFontCache.exe                   \
	testOSDLFixedFont.exe                        \
	testOSDLImage.exe                            \
	testOSDLLine.exe                             \
	testOSDLMultilineText.exe                    \
	testOSDLPixels.exe                           \
	testOSDLPoint2D.exe                          \
	testOSDLPolygon.exe                          \
	testOSDLSaveImage.exe                        \
	testOSDLText.exe                             \
	testOSDLTextWidget.exe                       \
	testOSDLTTFCache.exe                         \
	testOSDLTTF.exe                              \
	testOSDLUprightRect.exe                      \
	testOSDLWidget.exe


testOSDLAnimation_exe_SOURCES         = testOSDLAnimation.cc
testOSDLBezier_exe_SOURCES            = testOSDLBezier.cc
testOSDLCircle_exe_SOURCES            = testOSDLCircle.cc
testOSDLConic_exe_SOURCES             = testOSDLConic.cc
testOSDLFixedFontCache_exe_SOURCES    = testOSDLFixedFontCache.cc
testOSDLFixedFont_exe_SOURCES         = testOSDLFixedFont.cc
testOSDLImage_exe_SOURCES             = testOSDLImage.cc
testOSDLLine_exe_SOURCES              = testOSDLLine.cc
testOSDLMultilineText_exe_SOURCES     = testOSDLMultilineText.cc
testOSDLPixels_exe_SOURCES            = testOSDLPixels.cc
testOSDLPoint2D_exe_SOURCES           = testOSDLPoint2D.cc
testOSDLPolygon_exe_SOURCES           = testOSDLPolygon.cc
testOSDLSaveImage_exe_SOURCES         = testOSDLSaveImage.cc
testOSDLText_exe_SOURCES              = testOSDLText.cc
testOSDLTextWidget_exe_SOURCES        = testOSDLTextWidget.cc
testOSDLTTFCache_exe_SOURCES          = testOSDLTTFCache.cc
testOSDLTTF_exe_SOURCES               = testOSDLTTF.cc
testOSDLUprightRect_exe_SOURCES       = testOSDLUprightRect.cc
testOSDLWidget_exe_SOURCES            = testOSDLWidget.cc
