## Tests for the submodule 'Renderer' of the 'Video' module 
## of the OSDL library.


testsvideorendererdir=@OSDL_TEST_DIR@/video/videoRenderer

testsvideorenderer_CXXFLAGS = @AM_CXXFLAGS@

testsvideorenderer_PROGRAMS = \
	testOSDLRenderer.exe      \
	testOSDLSprite.exe
	


testOSDLRenderer_exe_SOURCES          = testOSDLRenderer.cc
testOSDLSprite_exe_SOURCES            = testOSDLSprite.cc
