## Makefile.am for the submodule 'Graphical User Interface' of the 'Video'
## module of the OSDL library.


# Convenience library for the 'Two Dimensional' submodule :
noinst_LTLIBRARIES = libOSDLGraphicalUserInterface.la

libOSDLGraphicalUserInterface_la_SOURCES = \
	$(GRAPHICAL_USER_INTERFACE_INTERFACES)      \
	$(GRAPHICAL_USER_INTERFACE_IMPLEMENTATIONS)


libOSDLGraphicalUserInterface_la_CPPFLAGS =

# -I@OSDL_BASIC@ -I@OSDL_VIDEO@ -I@OSDL_EVENTS@

libOSDLGraphicalUserInterfaceIncludedir      = $(includedir)/OSDL
libOSDLGraphicalUserInterfaceInclude_HEADERS = \
	$(GRAPHICAL_USER_INTERFACE_INTERFACES)


GRAPHICAL_USER_INTERFACE_INTERFACES = \
	OSDLGraphicalUserInterfaceIncludes.h 


GRAPHICAL_USER_INTERFACE_IMPLEMENTATIONS = 
	
